--- a/www/viewer.html
+++ b/www/viewer.html
@@ -14,6 +14,13 @@
     <link rel="stylesheet" href="https://developer.api.autodesk.com/viewingservice/v1/viewers/style.min.css?v=v2.12"/>
 
     <link rel="stylesheet" href="/css/index.css"/>
+    <style>
+        body {
+            padding: 0px;
+            border: 0px;
+            margin: 0px;
+        }
+    </style>
 </head>
 <body>
     <div id="forgeViewer"></div>
